@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-23T16:30:41Z",
+  "timestamp" : "2022-04-24T01:47:00Z",
   "count_outdated" : 426,
   "uniques_outdated" : 232,
-  "count" : 443,
-  "uniques" : 244,
+  "count" : 444,
+  "uniques" : 245,
   "clones" : [
     {
       "timestamp": "2022-04-10T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-04-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
