@@ -1,3 +1,9 @@
+2022-04-24T01:47:00Z:
+* notice: last 14d: all unq: 18 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 426 232 / 443 244
+* notice: next accum: outdated-all outdated-unq / all unq: 426 232 / 444 245
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-23T16:30:41Z:
 * notice: last 14d: all unq: 17 7
 * notice: prev accum: outdated-all outdated-unq / all unq: 425 231 / 443 244
